8/21/11 change format (<- title ->) and location (bottom) of titles to reclaim some vertical space [55595]
8/21/11 add title to Bond Type indicator, flip arrow to point up for now, use lowercase for range labels to be consistent
8/21/11 add cyan to rainbow mep color key, trying to match Jmol's color scheme
8/21/11 restore titles with smaller non-bold font
# 0.00.14 (55578) Aug 21, 2011
8/21/11 change request: remove titles from electronegativity table and color keys
8/21/11 change request: end rainbow electrostatic potential with blue, not violet
8/21/11 change request: use pale yellow for E-field plates "on"
8/21/11 change request: move "atom electronegativity" check box up 1 row, off by default
# 0.00.13 (55556) Aug 19, 2011
8/19/11 experiment with different colors for play area and plates, white is problematic
# 0.00.12 (55542) Aug 19, 2011
8/19/11 fix change notification mechanism for electronegativity table
8/19/11 first pass at electronegativity table
8/19/11 reverse order of colors for rainbow mep, so that red is negative
8/19/11 implement Option menu item to switch MEP color scheme to "rainbow" for "Real Molecules" tab
8/19/11 move bond type indicator closer to EN sliders, since they are closely related
8/19/11 fix seams in rainbow surface color key
8/19/11 add titles to surface color keys, fix black outline
8/18/11 first pass at isosurface color keys
8/18/11 add stubs for Options "rainbow mep" menu item
8/18/11 add empty Options menu to menubar
8/18/11 add View property and check box for "Electronegativity Table"
8/18/11 improved rotate cursor image
8/18/11 fix: atom labels "on" by default in "Real Molecules" tab
# 0.00.11 (55434) Aug 18, 2011
8/18/11 add new rotate cursor, created by NP
8/18/11 delete CO from real molecules, since "it could be confusing"
8/18/11 use HF as the default real molecule
8/18/11 initialize EN slider for atom B to middle value in all tabs