@@ -33,7 +33,4 @@ public class MPConstants {
     public static final double PLATE_HEIGHT = 450;
     public static final double PLATE_THICKNESS = 5;
     public static final double PLATE_PERSPECTIVE_Y_OFFSET = 35; // y difference between foreground and background edges of the plate
-    public static final Color PLATE_NEGATIVE_COLOR = new Color( 255, 255, 153 ); // pale yellow
-    public static final Color PLATE_POSITIVE_COLOR = PLATE_NEGATIVE_COLOR;
-    public static final Color PLATE_DISABLED_COLOR = Color.LIGHT_GRAY;//new Color( 120, 120, 120 );
 }
